2008-05-28  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-dbus.c:
	* src/hd-dbus.h:
	(hd_dbus_launch_service):
	Helper method for the below.

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	(hd_comp_mgr_launch_application):
	Method to launch applications over dbus.

2008-05-28  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-switcher-group.c:
	(hd_switcher_group_show_all):
	Added TODO comment.

2008-05-28  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-atoms.c:
	* src/hd-atoms.h:
	* src/hd-comp-mgr.c:
	* src/hd-switcher-group.c:
	* src/hd-switcher-group.h:
	* src/hd-switcher.c:
	* src/hd-switcher.h:
	Handle weaking up of hibernated applications.

2008-05-27  Tomas Frydrych  <tf@o-hand.com>

	* src/Makefile.am:
	Added -D_XOPEN_SOURCE (need to access kill()).

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	* src/hd-dbus.c:
	(hd_comp_mgr_close_client):
	(hd_comp_mgr_hibernate_client):
	Made more robust by adding a timed check followed by a kill() for
	applications that refuse to die.

	(hd_comp_mgr_hibernate_client):
	(hd_comp_mgr_hibernate_all):
	Differentiate between applications that know how to hibernate and
	those that do not; added force parameter to override.

2008-05-27  Tomas Frydrych  <tf@o-hand.com>

	* configure.ac:
	Added dbus to required packages.

	* src/Makefile.am:
	Added hd-atom.[ch] hd-dbus.[ch] and hd-util.[ch] to build.

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	Added dbus hook for hibernation signal,
	Subclassed MBWMCompMgrClutterClient and moved our flags into
	HdCompMgrClientPrivate.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	* src/hd-switcher-group.c:
	Start of implementation of hibernation infrastructure.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	* src/hd-switcher.c:
	Moved HdHome object from HdSwitcher into the CM; handle events on
	the Home actor.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-switcher-group.c:
	(hd_switcher_group_show_all):